--- a/固定收益证券/固定收益证券.md
+++ b/固定收益证券/固定收益证券.md
@@ -220,3 +220,11 @@ besides above, we can use another way to describle P,expressing the premium or d
 > with the red underline,t->t+1
 
 ![1571403646244](D:\picture\1571403646244.png)
+
+
+
+
+
+久期和CAPM模型是具有一致性的，即具有可比性
+
+对冲和投机是一个 硬币的两面
