--- a/大数据/大数据方法及应用.md
+++ b/大数据/大数据方法及应用.md
@@ -253,3 +253,12 @@ DataFrame也有类似的操作逻辑：
 
 <img src="D:\picture\1571927994056.png" alt="1571927994056" style="zoom: 67%;" />
 
+# 关联规则
+
+## 频繁项集
+
+​     
+
+## 关联规则
+
+## 序列模式
