--- a/现代统计软件/现代统计软件.md
+++ b/现代统计软件/现代统计软件.md
@@ -10,7 +10,25 @@ yangyuehan8841@163.com<br>
 
 上课：上课欢迎被打断。一节课熟悉R、编程环境、图形，统计学的内容在R里面学一遍，基于R语言的脚本来上课
 
+期末大作业：
 
+提交时间：1.10 23点59分
+
+邮件名称：包含组内一个或全组学生的姓名和学号，压缩包（zip，大作业(pdf命名依然使用学生信息)，代码(R)，平时作业(R)）
+
+小组成绩是不一样的，只要发过来的邮件说明贡献存在显著差异，抄袭
+
+
+
+大作业的内容，熟悉的内容都可（统计方法，R），大作业
+
+框架：
+
+1. 题目/摘要（中文）
+2. Intro 研究的内容和对象（实际问题、研究资料——每句话有迹可循，有出处，列出参考文献）——抄袭要求严格
+3. 模型（使用的统计方法）-Ass-procedures，关于方法的简单描述和说明——抄袭要求没那么严格
+4. Data--Result（不要贴代码、图不要用来刷字数、说明）--> 把事情说清楚
+5. 参考文献（不写扣分）尽量多一丢丢
 
 
 # 基本结构
