--- a/金融统计分析/金融统计分析.md
+++ b/金融统计分析/金融统计分析.md
@@ -438,10 +438,14 @@ A：降准、逆回购和MLF在货币供给量表上的体现都是一样的
 
 经常账户中的金融服务：独立第三方提供相关的咨询和业务办理的费用，不包括作为债权人或者债务人收取或支取的利息费用。
 
+> 我国央行扩表，一手买入外汇，一手发行了债券，而不是发行了基础货币，导致基础货币不变甚至于是减少
+
 ### 资本和金融项目
 
 - 资本
 - 金融（包括了非储备性质和储备性质）
+
+非储备性质金融账户可以理解为不考虑中央银行的金融往来的账户
 
 ### 净误差
 
